package GestionCadenaRestaurantes.PatronesConstruccion.Interface;

public interface Restaurant {
    void prepareTables();
    void serveFood();
}
